--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -14,10 +14,53 @@
   {% include 'style-tags', layout: 'theme' %}
   {% include 'script-tags', layout: 'theme' %}
 
+
   {{ content_for_header }}
+    {{ 'slick.css' | asset_url | stylesheet_tag }} 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
   {{ content_for_layout }}
+
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+<script>
+        $(document).ready(function(){
+        $('.my-slider').slick({
+            slidesToShow: 3,
+            slidesToScroll: 1,
+            autoplaySpeed: 2000,
+            arrows: true,
+            prevArrow:"<img class='a-left control-c prev slick-prev' src='/assets/img/arrow-left.svg'>",
+            nextArrow:"<img class='a-right control-c next slick-next' src='/assets/img/arrow-right.svg'>",
+            responsive:[
+                {
+                    breakpoint:768,
+                    settings:{
+                        slidesToShow:1,
+                        slidesToScroll:1
+                    }
+                }
+            ]
+        });
+        });
+    AOS.init();
+    var acc = document.getElementsByClassName("accordion");
+    var i;
+    for (i = 0; i < acc.length; i++) {
+    acc[i].addEventListener("click", function() {
+        this.classList.toggle("active");
+        var panel = this.nextElementSibling;
+        if (panel.style.maxHeight) {
+        panel.style.maxHeight = null;
+        } else {
+        panel.style.maxHeight = panel.scrollHeight + "px";
+        } 
+    });
+    }
 </body>
 </html>
