--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -1,1 +1,10 @@
 @charset 'UTF-8';
+@import "reset";
+@import "hero";
+@import "scienceandtech";
+@import "healing";
+@import "technology";
+@import "support";
+@import "faq";
+@import "testimonial";
+@import "style";
