added style and slick js to assets folder

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -17,6 +17,7 @@
 
   {{ content_for_header }}
     {{ 'slick.css' | asset_url | stylesheet_tag }} 
+    {{ 'style.css' | asset_url | stylesheet_tag }} 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
