--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,6 +1,6 @@
         <section class="hero">
             <div class="hero__container ">
-            {{ 'absolute.png' | asset_url | img_tag: 'The Soap Store' 'absolute'}}
+            {{ 'absolute.png' | asset_url | img_tag: 'The Soap Store', 'absolute'}}
                 <h2 class="hero__txt"  data-aos="fade-up" data-aos-offset="50" data-aos-delay="50" data-aos-duration="1000">
                     Welcome to the Future!
                 </h2>
@@ -11,9 +11,9 @@
                     Programmed with specific energetic information and frequencies, utilizing the latest technology for a safe, non-drug, non-chemical, and natural approach.
                 </p>
                 <div class="hero__imgcontainer flex">
-                    <img src="./assets/img/All Natural-01.png" alt="all natural" data-aos="fade-down" data-aos-duration="1000">
-                    <img class="crcl" src="./assets/img/no drugs.png" alt="no drugs" data-aos="fade-down" data-aos-duration="1500">
-                    <img src="./assets/img/No Chemicals-01.png" alt="no chemicals" data-aos="fade-down" data-aos-duration="2000">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/t/2/assets/All Natural-01.png" alt="all natural" data-aos="fade-down" data-aos-duration="1000">
+                    <img class="crcl" src="https://cdn.shopify.com/s/files/1/0610/4583/3977/t/2/assets/no drugs.png" alt="no drugs" data-aos="fade-down" data-aos-duration="1500">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/t/2/assets/No Chemicals-01.png" alt="no chemicals" data-aos="fade-down" data-aos-duration="2000">
                 </div>
                 <h3 class="hero__imgsubtxt" data-aos="zoom-in"    data-aos-offset="50" data-aos-delay="20" data-aos-duration="2000">
                     CLEAN HEALING • CLEAN SUPPORT
