--- a/assets/style.css
+++ b/assets/style.css
@@ -49,7 +49,7 @@ table {
 }
 
 .hero {
-  background-image: url(/assets/img/hero.png);
+  background-image: url(https://cdn.shopify.com/s/files/1/0610/4583/3977/files/Mask_Group_27.png?v=1636940389);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -406,7 +406,7 @@ table {
 
 .faq__container .accordion::before {
   content: '';
-  background-image: url(/assets/img/Addition-01.svg);
+  background-image: url(https://cdn.shopify.com/s/files/1/2625/2982/files/Addition-01.svg?v=1637109366);
   float: left;
   padding-right: 15px;
   height: 43px;
@@ -416,7 +416,7 @@ table {
 
 .faq__container .active::before {
   content: "";
-  background-image: url(/assets/img/Substraction.svg);
+  background-image: url(https://cdn.shopify.com/s/files/1/2625/2982/files/Substraction.svg?v=1637109366);
   height: 43px;
   width: 43px;
   background-repeat: no-repeat;
