--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -36,8 +36,8 @@
             slidesToScroll: 1,
             autoplaySpeed: 2000,
             arrows: true,
-            prevArrow:"<img class='a-left control-c prev slick-prev' src='/assets/img/arrow-left.svg'>",
-            nextArrow:"<img class='a-right control-c next slick-next' src='/assets/img/arrow-right.svg'>",
+            prevArrow:"<img class='a-left control-c prev slick-prev' src='https://cdn.shopify.com/s/files/1/2625/2982/files/arrow-left.svg?v=1637109366'>",
+            nextArrow:"<img class='a-right control-c next slick-next' src='https://cdn.shopify.com/s/files/1/2625/2982/files/arrow-right.svg?v=1637109366'>",
             responsive:[
                 {
                     breakpoint:768,
