--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -11,9 +11,9 @@
                     Programmed with specific energetic information and frequencies, utilizing the latest technology for a safe, non-drug, non-chemical, and natural approach.
                 </p>
                 <div class="hero__imgcontainer flex">
-                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/t/2/assets/All Natural-01.png" alt="all natural" data-aos="fade-down" data-aos-duration="1000">
-                    <img class="crcl" src="https://cdn.shopify.com/s/files/1/0610/4583/3977/t/2/assets/no drugs.png" alt="no drugs" data-aos="fade-down" data-aos-duration="1500">
-                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/t/2/assets/No Chemicals-01.png" alt="no chemicals" data-aos="fade-down" data-aos-duration="2000">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/All_Natural-01.png?v=1637108537" alt="all natural" data-aos="fade-down" data-aos-duration="1000">
+                    <img class="crcl" src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/no_drugs.png?v=1637108537" alt="no drugs" data-aos="fade-down" data-aos-duration="1500">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/No_Chemicals-01.png?v=1637108537" alt="no chemicals" data-aos="fade-down" data-aos-duration="2000">
                 </div>
                 <h3 class="hero__imgsubtxt" data-aos="zoom-in"    data-aos-offset="50" data-aos-delay="20" data-aos-duration="2000">
                     CLEAN HEALING • CLEAN SUPPORT
@@ -23,7 +23,7 @@
         <section class="scienceandtech ">
             <div class="scienceandtech__container flex">
                 <div class="scienceandtech__container--left" data-aos="fade-right" >
-                    <img src="/assets/img/secondsection.png" alt="">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/secondsection.png?v=1637108538" alt="">
                 </div>
                 <div class="scienceandtech__container--right flexcol" data-aos="fade-left">
                     <h2 class="title">
@@ -41,37 +41,37 @@
             </h2>
             <div class="healing__container">
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-in-sine">
-                    <img src="/assets/img/1.png" alt="tinnitus">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/1.png?v=1637108537" alt="tinnitus">
                     <h3 class="healing--text">
                         Tinnitus Relief Patch 
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-in-sine">
-                    <img src="/assets/img/2.png" alt="tinnitus">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/2.png?v=1637108537" alt="tinnitus">
                     <h3 class="healing--text">
                         Tinnitus Relief Patch 
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="2000" data-aos-easing="ease-in-sine">
-                    <img src="/assets/img/3.png" alt="tinnitus">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/3.png?v=1637108537" alt="tinnitus">
                     <h3 class="healing--text">
                         Tinnitus Relief Patch 
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol " data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-in-sine">
-                    <img src="/assets/img/4.png" alt="tinnitus">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/4.png?v=1637108537" alt="tinnitus">
                     <h3 class="healing--text">
                         Tinnitus Relief Patch 
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-in-sine">
-                    <img src="/assets/img/5.png" alt="tinnitus">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/5.png?v=1637108537" alt="tinnitus">
                     <h3 class="healing--text">
                         Tinnitus Relief Patch 
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="2000" data-aos-easing="ease-in-sine">
-                    <img src="/assets/img/6.png" alt="tinnitus">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/6.png?v=1637108537" alt="tinnitus">
                     <h3 class="healing--text">
                         Tinnitus Relief Patch 
                     </h3>
@@ -96,7 +96,7 @@
                     </p>
                 </div>
                 <div class="technology__container--right" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
-                    <img src="/assets/img/bg1.png" alt="">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/bg1.png?v=1637108537" alt="">
                 </div>
             </div>
             <div class="technology__container flex reverse">
@@ -117,7 +117,7 @@
                     </p>
                 </div>
                 <div class="technology__container--right" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-                    <img src="/assets/img/bg2.png" alt="">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/bg2.png?v=1637108537" alt="">
                 </div>
             </div>
             <div class="technology__container flex">
@@ -140,7 +140,7 @@
                     </p>
                 </div>
                 <div class="technology__container--right" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-                    <img src="/assets/img/bg3.png" alt="">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/bg3.png?v=1637108537" alt="">
                 </div>
             </div>
             <div class="technology__container flex reverse">
@@ -161,7 +161,7 @@
                     </p>
                 </div>
                 <div class="technology__container--right" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-                    <img src="/assets/img/bg4.png" alt="">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/bg4.png?v=1637108537" alt="">
                 </div>
             </div>
         </section>
@@ -171,13 +171,13 @@
             </div>
             <div class="support__container flex">
                 <div class="support__container--left flexcol" data-aos="fade-right" data-aos-offset="300">
-                    <img src="/assets/img/Group 803.png" alt="patch green">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/Group_803.png?v=1637108537" alt="patch green">
                     <h3 class="imgsubtext">
                         How to Apply Restore Patch
                     </h3>
                 </div>
                 <div class="support__container--right flexcol" data-aos="fade-left" data-aos-offset="300">
-                    <img src="/assets/img/Group 804.png" alt="patch green">
+                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/Group_804.png?v=1637108537" alt="patch green">
                     <h3 class="imgsubtext">
                        Watch How to Restore Patch Work
                     </h3>
@@ -237,12 +237,12 @@
                 Our Satisfied Customers
             </h2>
             <div class="testimonial--happystarcustomer flexcol">
-                <img src="/assets/img/Group 799.svg" class="stars" alt="stars">
+                <img src="https://cdn.shopify.com/s/files/1/2625/2982/files/Group_799.svg?v=1637109366" class="stars" alt="stars">
                 <h4>5400 Happy Patchers</h4>
             </div>
             <div class="testimonial__container my-slider flex">
                 <div class="testimonial__container--item flexcol">
-                    <img src="/assets/img/Group 799.svg" class="stars" alt="stars">
+                    <img src="https://cdn.shopify.com/s/files/1/2625/2982/files/Group_799.svg?v=1637109366" class="stars" alt="stars">
                     <p class="message">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae maxime placeat odio, voluptatibus, quos porro consequatur id nam omnis dolores nostrum voluptas ipsam sit laboriosam vel soluta, dolorum earum eveniet!
                     </p>
@@ -251,7 +251,7 @@
                     </p>
                 </div>
                 <div class="testimonial__container--item flexcol">
-                    <img src="/assets/img/Group 799.svg" class="stars" alt="stars">
+                    <img src="https://cdn.shopify.com/s/files/1/2625/2982/files/Group_799.svg?v=1637109366" class="stars" alt="stars">
                     <p class="message">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae maxime placeat odio, voluptatibus, quos porro consequatur id nam omnis dolores nostrum voluptas ipsam sit laboriosam vel soluta, dolorum earum eveniet!
                     </p>
@@ -260,7 +260,7 @@
                     </p>
                 </div>
                 <div class="testimonial__container--item flexcol">
-                    <img src="/assets/img/Group 799.svg" class="stars" alt="stars">
+                    <img src="https://cdn.shopify.com/s/files/1/2625/2982/files/Group_799.svg?v=1637109366" class="stars" alt="stars">
                     <p class="message">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae maxime placeat odio, voluptatibus, quos porro consequatur id nam omnis dolores nostrum voluptas ipsam sit laboriosam vel soluta, dolorum earum eveniet!
                     </p>
@@ -269,7 +269,7 @@
                     </p>
                 </div>
                 <div class="testimonial__container--item flexcol">
-                    <img src="/assets/img/Group 799.svg" class="stars" alt="stars">
+                    <img src="https://cdn.shopify.com/s/files/1/2625/2982/files/Group_799.svg?v=1637109366" class="stars" alt="stars">
                     <p class="message">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae maxime placeat odio, voluptatibus, quos porro consequatur id nam omnis dolores nostrum voluptas ipsam sit laboriosam vel soluta, dolorum earum eveniet!
                     </p>
@@ -278,7 +278,7 @@
                     </p>
                 </div>
                 <div class="testimonial__container--item flexcol">
-                    <img src="/assets/img/Group 799.svg" class="stars" alt="stars">
+                    <img src="https://cdn.shopify.com/s/files/1/2625/2982/files/Group_799.svg?v=1637109366" class="stars" alt="stars">
                     <p class="message">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae maxime placeat odio, voluptatibus, quos porro consequatur id nam omnis dolores nostrum voluptas ipsam sit laboriosam vel soluta, dolorum earum eveniet!
                     </p>
