--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -14,6 +14,8 @@
   {% include 'style-tags', layout: 'theme' %}
   {% include 'script-tags', layout: 'theme' %}
 
+  <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+  <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 
   {{ content_for_header }}
     {{ 'slick.css' | asset_url | stylesheet_tag }} 
@@ -22,6 +24,8 @@
 
 <body>
   {{ content_for_layout }}
-
 </body>
+<script>
+AOS.init();
+</script>
 </html>
