--- a/assets/style.scss
+++ b/assets/style.scss
@@ -6,6 +6,8 @@
 @import "support";
 @import "faq";
 @import "testimonial";
+@import "header";
+@import "footer";
 @font-face{
     font-family: "MetroThin";
     src:url(/fonts/Metropolis-Regular.otf)format("otf");
@@ -49,3 +51,7 @@ a{
 p, h1,h2,h3,h4,h5,h6,button{
     color: #083D5D;
 }
+html{
+    scroll-behavior: smooth;
+}
+
