--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,27 +1,28 @@
 
        <section class="hero">
             <div class="hero__container ">
-            {{ 'absolute.png' | asset_url | img_tag: 'The Soap Store', 'absolute'}}
-                <h2 class="hero__txt"  data-aos="fade-up" data-aos-offset="50" data-aos-delay="50" data-aos-duration="1000">
-                    Welcome to the Future!
-                </h2>
-                <h3 class="hero__txtsub"  data-aos="fade-up"  data-aos-offset="20" data-aos-delay="100" data-aos-duration="2000">
-                    HEALING AND SUPPORT PATCHES
-                </h3>
-                <p class="hero__parag"  data-aos="fade-up"    data-aos-offset="50" data-aos-delay="20" data-aos-duration="2500">
-                    Programmed with specific energetic information and frequencies, utilizing the latest technology for a safe, non-drug, non-chemical, and natural approach.
-                </p>
-                <div class="hero__imgcontainer flex">
-                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/All_Natural-01.png?v=1637108537" alt="all natural" data-aos="fade-down" data-aos-duration="1000">
-                    <img class="crcl" src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/no_drugs.png?v=1637108537" alt="no drugs" data-aos="fade-down" data-aos-duration="1500">
-                    <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/No_Chemicals-01.png?v=1637108537" alt="no chemicals" data-aos="fade-down" data-aos-duration="2000">
-                </div>
-                <h3 class="hero__imgsubtxt" data-aos="zoom-in"    data-aos-offset="50" data-aos-delay="20" data-aos-duration="2000">
-                    CLEAN HEALING • CLEAN SUPPORT
-                </h3>
+                {{ 'absolute.png' | asset_url | img_tag: 'The Soap Store', 'absolute'}}
+                    <h2 class="hero__txt"  data-aos="fade-up" data-aos-offset="50" data-aos-delay="50" data-aos-duration="1000">
+                        Welcome to the Future!
+                    </h2>
+                    <h3 class="hero__txtsub"  data-aos="fade-up"  data-aos-offset="20" data-aos-delay="100" data-aos-duration="2000">
+                        HEALING AND SUPPORT PATCHES
+                    </h3>
+                    <p class="hero__parag"  data-aos="fade-up"    data-aos-offset="50" data-aos-delay="20" data-aos-duration="2500">
+                        Programmed with specific energetic information and frequencies, utilizing the latest technology for a safe, non-drug, non-chemical, and natural approach.
+                    </p>
+                    <div class="hero__imgcontainer flex">
+                        <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/All_Natural-01.png?v=1637108537" alt="all natural" data-aos="fade-down" data-aos-duration="1000">
+                        <img class="crcl" src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/no_drugs.png?v=1637108537" alt="no drugs" data-aos="fade-down" data-aos-duration="1500">
+                        <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/No_Chemicals-01.png?v=1637108537" alt="no chemicals" data-aos="fade-down" data-aos-duration="2000">
+                    </div>
+                    <h3 class="hero__imgsubtxt" data-aos="zoom-in"    data-aos-offset="50" data-aos-delay="20" data-aos-duration="2000">
+                        CLEAN HEALING • CLEAN SUPPORT
+                    </h3>
             </div>
         </section>
-        <section class="scienceandtech ">
+
+        <section class="scienceandtech" id="scienceandtech">
             <div class="scienceandtech__container flex">
                 <div class="scienceandtech__container--left" data-aos="fade-right" >
                     <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/secondsection.png?v=1637108538" alt="">
@@ -36,7 +37,7 @@
                 </div>
             </div>
         </section>
-        <section class="healing">
+        <section class="healing" id="healing">
             <h2 class="healing--title" data-aos="fade-up">
                 Our Healing & Support Patches
             </h2>
@@ -50,31 +51,31 @@
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-in-sine">
                     <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/2.png?v=1637108537" alt="tinnitus">
                     <h3 class="healing--text">
-                        Tinnitus Relief Patch 
+                        Anxiety Relief Patch
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="2000" data-aos-easing="ease-in-sine">
                     <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/3.png?v=1637108537" alt="tinnitus">
                     <h3 class="healing--text">
-                        Tinnitus Relief Patch 
+                        Sleep Patch
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol " data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-in-sine">
                     <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/4.png?v=1637108537" alt="tinnitus">
                     <h3 class="healing--text">
-                        Tinnitus Relief Patch 
+                        Migraine/Headache Patch
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-in-sine">
                     <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/5.png?v=1637108537" alt="tinnitus">
                     <h3 class="healing--text">
-                        Tinnitus Relief Patch 
+                        Focus/Concentration Patch
                     </h3>
                 </div>
                 <div class="healing--imgcontainer flexcol" data-aos="fade-in" data-aos-duration="2000" data-aos-easing="ease-in-sine">
                     <img src="https://cdn.shopify.com/s/files/1/0610/4583/3977/files/6.png?v=1637108537" alt="tinnitus">
                     <h3 class="healing--text">
-                        Tinnitus Relief Patch 
+                        Energy Patch
                     </h3>
                 </div>
             </div>
