--- a/assets/style.css
+++ b/assets/style.css
@@ -49,7 +49,7 @@ table {
 }
 
 .hero {
-  background-image: url(/assets/img/hero.png);
+  background-image: url(https://cdn.shopify.com/s/files/1/0555/5145/9468/files/hero.png?v=1637292577);
   background-repeat: no-repeat;
   background-size: cover;
 }
