--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -21,10 +21,10 @@
     {{ 'slick.css' | asset_url | stylesheet_tag }} 
     {{ 'style.css' | asset_url | stylesheet_tag }} 
 </head>
-
+{%section 'header' %}
 <body>
   {{ content_for_layout }}
-
+{% section 'footer' %}
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
