--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -16,7 +16,9 @@
 
   <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
   <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
-
+  {% if settings.favicon != blank %}
+    <link rel="shortcut icon" href="{{ settings.favicon | img_url: '32x32' }}" type="image/png">
+  {% endif %}
   {{ content_for_header }}
     {{ 'slick.css' | asset_url | stylesheet_tag }} 
     {{ 'style.css' | asset_url | stylesheet_tag }} 
