--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -6,8 +6,8 @@
             </div>
             <nav class="navigation-menu">
                 <ul class="main-navigation">
-                    <li><a href="#scienceandtech">PRODUCT</a></li>
-                    <li><a href="#healing">SHOP</a></li>
+                    <li><a href="#healing">PRODUCT</a></li>
+                    <li><a href="#">SHOP</a></li>
                     <li><a href="#technology">TECHNOLOGY</a></li>
                     <li><a href="#support">SUPPORT</a></li>
                     <li><a href="#testimonial">REVIEWS</a></li>
@@ -21,8 +21,8 @@
         <div class="responsive-menu">
             <input type="checkbox" id="menu-toggle1">
             <div class="nav-menu">
-                <a href="#scienceandtech" class="nav-menu-links">PRODUCT</a>
-                <a href="#healing" class="nav-menu-links">SHOP</a>
+                <a href="#healing" class="nav-menu-links">PRODUCT</a>
+                <a href="#" class="nav-menu-links">SHOP</a>
                 <a href="#technology" class="nav-menu-links">TECHNOLOGY</a>
                 <a href="#support" class="nav-menu-links">SUPPORT</a>
                 <a href="#testimonial" class="nav-menu-links">REVIEWS</a>
