--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -80,6 +80,7 @@
                             <input type="submit" value="SUBSCRIBE" class="submitbtn">
                         </div>
                     </form>
-                </div>
+                        <small class="copyright">Copyright © 2021, Restore Patch | Powered by {<a href="dnamicro.com" target"_blank">dna:micro}</a></small>
+                </div>    
             </div>
         </footer>
