Fixed footer links

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -4,7 +4,7 @@
                     <a href="#healing" class="links">PRODUCTS</a>
                     <a href="#technology" class="links">TECHNOLOGY</a>
                     <a href="#support" class="links">SUPPORT</a>
-                    <a href="testimonial" class="links">REVIEWS</a>
+                    <a href="#testimonial" class="links">REVIEWS</a>
                 </div>
                 <div class="footer__container--middle">
                     <p>FOLLOW US</p>
